# yatube

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml
backend/: .dockerignore  Dockerfile
backend/apps/users/: models.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
