[tool.poetry]
name = "yatube"
version = "0.1.0"
description = ""
authors = ["LeAries <learies@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=3.2,<4.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.7"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
